--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>CRUD con AJAX y PHP</h1>
+        <h1>CRUD DW2</h1>
 
         <div class="form-container">
             <h2>Crear nuevo registro</h2>
